--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,17 @@
 	
 	<!--  https://spring.io/guides/gs/gateway/ -->
     <dependencies>
+		<!-- Sleuth 설정 -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
+		<!-- Zipkin -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zipkin</artifactId>
+		</dependency>
+		
     	<!-- Eureka 설정 -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
