--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,13 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
 		</dependency>
-		<!-- Zipkin -->
+		
+		<!-- Zipkin 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-zipkin</artifactId>
 		</dependency>
+		-->
 		
     	<!-- Eureka 설정 -->
 		<dependency>
