--- a/pom.xml
+++ b/pom.xml
@@ -27,13 +27,12 @@
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
 		</dependency>
 		
-		<!-- Zipkin 
+		<!-- Zipkin -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-zipkin</artifactId>
 		</dependency>
-		-->
-		
+				
     	<!-- Eureka 설정 -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
